# bloomfilter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  lab.en.md  lab.zh.md
build_support/: packages.sh
build_support/googletest/: CMakeLists.txt.in
src/filter/: bloom_filter.cc
src/include/filter/: bloom_filter.h
src/include/utils/: bitset.h  fileio.h  hash.h
src/utils/: bitset.cc  fileio.cc  hash.cc
tests/: 286urls.txt  724urls.txt  bitset_test.cc  fileio_test.cc  filter_test.cc
